--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -13,9 +13,7 @@
 	  <th> Address</th>
           <th>City</th>
           <th>Phone </th>
-	 <% if  current_user.admin?  %>
-          <th> </th>
-  	 <% end %>
+	  <% "<th> </th>" if  current_user.admin?  %>
       </tr>
   </thead>
   <tbody>
