--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -20,11 +20,14 @@
 	<b>Pharmacy:</b> <%= @patient.pharmacy %> : <%= num_to_phone(@patient.pharm_phone) %>
 	<b>Emergency Contact:</b> <% @patient.alt_contact_name %> <b> Phone: </b> <% @patient.alt_contact_phone %>
 	<b>Last Visit:</b> <%= @patient.last_visit_date %>
-	<b>Created:</b> <%= @patient.entry_date %>
-	<b>Last Modification By:</b> <%= @patient.lastmod_by %>
         <% if !@patient.chart_file.blank? %>
 	<b>Chart File:</b> <%= link_to 'Chart', chart_patient_path(@patient) %>
         <% end %>
+	<b>Allergies</b>: <%= @patient.allergies %>
+	<b>Medications</b>: <%= @patient.medications  %>
+	<b>Notes</b>: <%= @patient.notes %>
+	<b>Created:</b> <%= @patient.entry_date %>
+	<b>Last Modification By:</b> <%= @patient.lastmod_by %>
            </pre>
       </h1>
     </section>
