--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,6 +48,7 @@
          	<li> <%= link_to "Doctors", doctors_path, method: :get %> </li>
          	<li> <%= link_to "Ins. Providers", providers_path, method: :get %> </li>
          	<li> <%= link_to "Medications", drugs_path, method: :get %> </li>
+         	<li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
             </ul>
           </li>
 <% end %>
