--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,20 +10,24 @@
   <ul>
    <dl>
     <dt>Patient management</dt>
-    <dd>- You can easily add and modify patients records using many available fields. Search for patients by last name or ohip number. Print sticker for any patient in the database. Patient charts (pdf) are accessible from patient profile.</dd>
+    <dd>- You can easily add and modify patients records using many available fields. Search for patients by last name or ohip number. Generate PDF sticker for any patient in the database. Patient charts (PDF) are accessible from patient profile.</dd>
     <dt>Visit management</dt>
-    <dd>- Slide a card in card reader when patient walks in and you will get patient's form prefilled with data read from the card, or existing patient profile. Card is validated in the process. Visit form in pdf format is available for printing.</dd>
+    <dd>- Slide a card in card reader when patient walks in and you will get patient's form pre-filled with data read from the card, or existing patient profile. Card is validated in the process. Visit form (encounter) form) in PDF format is available for printing. Form is optional, generous notes data field is provided for people who prefer to enter data using computer or mobile device </dd>
     <dt>Day Sheet</dt>
-    <dd> This page will show concise visit info for this date. You can use datepicker control to select date in the past and see visit info for that day</dd>
+    <dd> This page shows current list of visits together with billing status. You can use datepicker control to select date in the past and access visits for that day</dd>
     <dt>Billing</dt>
     <dd> - Once diagnosis is established and procedures are assigned, visit cand be marked as ready for billing. These visits will be shown on billing page and available for export to EDT/CSV folder. Neutral CSV and standard MCEDT formats are supported. CSV is mostly
 used with 3-rd party billing packages, while MCEDT files can be sent directly to the Ministry of Health server.</dd>
     <dt>Doctor management</dt>
-    <dd> - Add/delete/update doctor's records. Set active flag for doctors that work in the clinic </dd>
+    <dd> - Add/delete/update doctor's records. Supports contact information, specialty, billing specifics, license info etc.  Set active flag for doctors that work in the clinic </dd>
     <dt>Procedures</dt>
-    <dd>  - Add/delete/update procedures. Set active flag for commonly used procedures to give them priority during selection. Code, price, units, description can all be updated.
+    <dd>  - Add/delete/update the list of more than 11000 current procedures. Set active flag for commonly used service codes to give them priority during selection. Code, price, units, description can all be updated.
     <dt>Diagnoses</dt>
-    <dd> - Add/delete/update diagnoses. </dd>
+    <dd> - List of more than 1500 diagnoses. Add/delete/update diagnoses. </dd>
+    <dt> Medications</dt>
+    <dd> - Provides comprehensive list of medications with specifics like dosage, strength, frequency, format etc. List can be easily customized by entering new medications.  </dd>
+    <dt> Insurance Providers</dt>
+    <dd> - Provides long list of local insurance providers along with contact information. The list can be customized </dd>
     <dt> Reports</dt>
     <dd> - Generate variety of reports based on doctor(s) and time frame selected. Save reports into database. Generate pdf reports.  </dd>
   </dl>
