--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
-Get help on <%= full_title %> at the <a href="<%= project_url %>"><%= full_title %></a>
+Help section of <%= full_title %> at the <a href="<%= project_url %>"><%= full_title %></a>
 </p>
 
