--- a/app/views/diagnoses/_form.html.erb
+++ b/app/views/diagnoses/_form.html.erb
@@ -1,30 +1,46 @@
 <%= form_for(@diagnosis) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
+<div class="row">
+  <div class="col-sm-3">
+  <%= f.label :'Diagnostic Code' %>
+  </div>  
+  <div class="col-sm-4">
+  <%= f.text_field :code, class: 'form-control' %>
+  </div>  
+</div>  
 
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
-
-  <%= f.label :'Diagnostic Code' %>
-  <%= f.text_field :code, class: 'form-control' %>
-
+  <div class="col-sm-3">
   <%= f.label :'Description' %>
+  </div>  
+  <div class="col-sm-4">
   <%= f.text_field :descr, class: 'form-control' %>
-
-  <%= f.label :'Problem Type' %>
-  <%= f.text_field :prob_type, class: 'form-control' %>
-
-    <div class="col-md-2">
-          <%= f.label :active %>
-          <%= f.check_box :active  %>
-    </div>
-  
-  </div>
+  </div>  
 </div>  
+
+<div class="row">
+  <div class="col-sm-3">
+  <%= f.label :'Problem Type' %>
+  </div>  
+  <div class="col-sm-4">
+  <%= f.text_field :prob_type, class: 'form-control' %>
+  </div>  
+</div>
+
+<div class="row">
+  <div class="col-sm-3">
+          <%= f.label :active %>
+  </div>
+  <div class="col-sm-3">
+          <%= f.check_box :active  %>
+  </div>
+</div>
 
 <p>
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-sm-3"> </div>
+    <div class="col-sm-4">
     <%= f.submit yield(:button_text), class: "btn btn-primary" %>
     </div>
 </div>
