--- a/app/views/diagnoses/new.html.erb
+++ b/app/views/diagnoses/new.html.erb
@@ -2,8 +2,6 @@
 <% provide(:button_text, 'Save') %>
 <h1>New Diagnostic Code </h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-sm-6 col-sm-offset-4">
     <%= render 'form' %>
   </div>
-</div>
