--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,8 +7,10 @@
           <th>Email</th>
 	  <th>Created</th>
           <th>Admin</th>
+<% if current_user.admin? %>
 	  <th>&nbsp;</th>
 	  <th>&nbsp;</th>
+<% end %>
       </tr>
   </thead>
   <tbody>
