--- a/app/views/vaccines/new.html.erb
+++ b/app/views/vaccines/new.html.erb
@@ -2,8 +2,8 @@
 <% provide(:button_text, 'Save') %>
 <h1>New Vaccine </h1>
 
-<div class="row justify-content-md-center">
-	<div class="col-md-4 col-md-offset-4">
+<div class="row justify-content-sm-center">
+	<div class="col-sm-4 col-sm-offset-4">
 
 	<%= render 'form' %>
 
