--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -1,10 +1,14 @@
 <% provide(:title, 'All billing') %>
-<% date = params[:date].to_date rescue Date.today %>
+<% date = params[:date].to_date rescue nil %>
   
 <table class="tbl table-hover"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
-	  <th class="tbl_lsm">Time</th>
+	  <% if date  %>
+	    <th class="tbl_lsm">Time</th>
+	  <% else %>
+	    <th class="tbl_md">Date</th>
+	  <%end %>
           <th class="tbl_md">Doctor</th>
 	  <th class="tbl_lsm">Visit Id</th>
           <th class="tbl_lmd">Patient</th>
@@ -13,12 +17,12 @@
           <th class="tbl_lmd">Procedure(s)</th>
           <th class="tbl_md">Diagnosis</th>
           <th class="tbl_xmd">Ttl. Fee</th>
-          <th class="tbl_sm">Status</th>
+          <th class="tbl_md">Status</th>
 	  <th class="tbl_sm">Entry By</th>
       </tr>
   </thead>
   <tbody>
-	  <%= render partial: "visit", collection: @visits %>
+	  <%= render partial: "visit", collection: @visits, locals: {filter: date}  %>
   </tbody>
 </table>
 
