--- a/app/views/daysheet/_set_doctor.html.erb
+++ b/app/views/daysheet/_set_doctor.html.erb
@@ -1,6 +1,5 @@
-
-<h1> </h1>
-<div class="col-md-4 col-md-offset-4">
+<div style="height: 100px;"> </div>
+<div class="col-md-2 col-sm-4 col-sm-offset-4"> 
 <%= form_with url: daysheet_index_path do |f| %>
 	<%= f.collection_select(:doc_id, get_active_doctors, :id, :lname, {prompt: 'Please assign doctor for this shift'}, {onchange: "this.form.submit()"} ) %>
 <% end %>
