--- a/app/views/diagnoses/edit.html.erb
+++ b/app/views/diagnoses/edit.html.erb
@@ -2,4 +2,6 @@
 <% provide(:button_text, 'Save changes') %>
 <h1>Edit Diagnosis</h1>
 
+  <div class="col-sm-6 col-sm-offset-4">
     <%= render 'form' %>
+  </div>
