--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -2,87 +2,87 @@
   <%= render 'shared/error_messages', object: f.object %>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-1">
+  <div class="col-sm-6 col-sm-offset-1">
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label 'Last Name' %>
   <%= f.text_field :lname %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'First Name' %>
   <%= f.text_field :fname %>
   </div>
   
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :service %>
   <%= f.text_field :service %>
   </div>
   
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'Type' %>
   <%= f.text_field :ph_type %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :district %>
   <%= f.text_field :district %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :bills %>
   <%= f.select :bills, TRUE_FALSE %>
   </div>
 
-  <div class="col-md-10"></div>
+  <div class="col-sm-10"></div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'CPSO Number' %>
   <%= f.text_field :cpso_num %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'Provider No' %>
   <%= f.text_field :provider_no %>
   </div>
   
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'Group No' %>
   <%= f.text_field :group_no %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'Billing No' %>
   <%= f.text_field :billing_num %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'License No' %>
   <%= f.text_field :licence_no %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :specialty %>
   <%= f.text_field :specialty %>
   </div>
 
   </div>
-  <div class="col-md-4 ">
+  <div class="col-sm-4 ">
 
   <%= f.label :address %>
   <%= f.text_field :address %>
   
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :city %>
   <%= f.text_field :city %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'Province' %>
   <%= f.select(:prov, PROVINCES ) %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'Postal Code' %>
   <%= f.text_field :postal %>
   </div>
@@ -90,17 +90,17 @@
   <%= f.label :office %>
   <%= f.text_field :office %>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'Phone Number' %>
   <%= f.telephone_field :phone, placeholder: 'xxx-xxx-xxxx' %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :'Mobile Number' %>
   <%= f.telephone_field :mobile %>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <%= f.label :email %>
   <%= f.text_field :email %>
   </div>
@@ -109,7 +109,7 @@
 </div>
 
   <div class="row">
-    <div class="col-md-10 col-md-offset-1">
+    <div class="col-sm-10 col-sm-offset-1">
      <%= f.text_area :note, rows:5, placeholder: 'Notes' %>
      <p>
      <%= f.submit yield(:button_text), class: "btn btn-primary" %>
