--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -2,8 +2,8 @@
 
 	<h1><%= @doctor.full_name %> -  Doctor's profile </h1>
 
-<div class="row justify-content-md-center">
-  <div class="col-md-6 col-md-offset-3">
+<div class="row justify-content-sm-center">
+  <div class="col-sm-6 col-sm-offset-3">
 	   <pre>
 	      Name: <%= @doctor.full_name %>
 	      Billing Number: <%= @doctor.billing_num %> 
