--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -3,20 +3,17 @@
 <table class="tbl table-hover"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
-          <th class="tbl_md">Name</th>
-          <th class="tbl_xs">Gen</th>
-          <th class="tbl_lsm">Health #</th>
-          <th class="tbl_xs">Ver</th>
-	  <th class="tbl_lsm">Expiry</th> 
-	  <th class="tbl_xs">Type</th> 
-	  <th class="tbl_lsm">DOB</th> 
-          <th class="tbl_xs">Age</th>
-	  <th class="tbl_lsm">Last Visit </th>
-	  <th class="tbl_xs">Visits</th>
-          <th class="tbl_lsm">Phone</th>
- 	  <th class="tbl_sm">File#</th>
- 	  <th class="tbl_xlg">Address</th>
- 	  <th class="tbl_sm">Chart</th>
+          <th class="tbl_lmd">Name</th>
+          <th class="tbl_sm">Gen</th>
+	  <th class="tbl_sm">Type</th> 
+          <th>Health #</th>
+	  <th>Expiry</th> 
+	  <th>DOB</th> 
+          <th class="tbl_sm">Age</th>
+	  <th>Last Visit </th>
+	  <th class="tbl_sm">Visits</th>
+          <th>Phone</th>
+ 	  <th >File#</th>
       <% if current_user.admin?  %>
 	  <th class="tbl_sm"> </th>
       <% end %>
