--- a/app/views/procedures/edit.html.erb
+++ b/app/views/procedures/edit.html.erb
@@ -2,11 +2,8 @@
 <% provide(:button_text, 'Save changes') %>
 <h1>Edit procedure</h1>
 
-<div class="row justify-content-md-center">
-  <div class="col-md-10 col-md-offset-2">
-
+<div class="col-md-6 col-sm-12 col-md-offset-4 col-sm-offset-3">
 <%= render 'form' %>
-
-  </div>
 </div>
+
 
