--- a/app/views/procedures/new.html.erb
+++ b/app/views/procedures/new.html.erb
@@ -2,8 +2,6 @@
 <% provide(:button_text, 'Save') %>
 <h1>New Procedure </h1>
 
-<div class="row justify-content-md-center">
-  <div class="col-md-10 col-md-offset-2">
+<div class="col-md-6 col-sm-12 col-md-offset-4 col-sm-offset-3">
     <%= render 'form' %>
-  </div>
 </div>
