--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -3,43 +3,43 @@
   <%= render 'shared/error_messages', object: f.object %>
 
 <div class="row">
-<div class="col-md-2 col-md-offset-4" >
+<div class="col-sm-2 col-sm-offset-4" >
   <%= f.label "Select Doctor" %>
     <%= f.collection_select(:doc_id, get_active_doctors, :id, :lname, prompt: 'All Active' ) %>
 </div>
     
-<div class="col-md-2" >
+<div class="col-sm-2" >
   <%= f.label "Report type" %>
   <%= f.select :rtype, REPORT_TYPES, prompt: 'Select Type' %>
 </div>
 
-  <div class="col-md-10"></div>
+  <div class="col-sm-10"></div>
 
-<div class="col-md-2 col-md-offset-3" id="sdate" style="display:none;">
+<div class="col-sm-2 col-sm-offset-4" id="sdate" style="display:none;">
   <%= f.label "Select Date" %>
   <%= f.date_field :sdate, class: 'datepicker' %>
 </div>
 
-  <div class="col-md-10"></div>
-<div class="col-md-2 col-md-offset-3" id="edate" style="display:none;">
+  <div class="col-sm-10"></div>
+<div class="col-sm-2 col-sm-offset-4" id="edate" style="display:none;">
   <%= f.label "To" %>
   <%= f.date_field :edate, class: 'datepicker' %>
 </div>
 
-  <div class="col-md-10"></div>
-<div class="col-md-2 col-md-offset-3" id="year" style="display:none;">
+  <div class="col-sm-10"></div>
+<div class="col-sm-2 col-sm-offset-4" id="year" style="display:none;">
   <%= f.label "Year" %>
   <%= select_year Time.now, start_year: Time.now.year-10, end_year: Time.now.year %>
 </div>
 
-  <div class="col-md-10"></div>
-<div class="col-md-2 col-md-offset-3" id="month" style="display:none;">
+  <div class="col-sm-10"></div>
+<div class="col-sm-2 col-sm-offset-3" id="month" style="display:none;">
   <%= f.label "Month" %>
   <%= select_month Time.now  %>
 </div>
 
-  <div class="col-md-10"></div>
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-sm-10"></div>
+  <div class="col-sm-4 col-sm-offset-4">
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   </div>
 
