--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,36 +1,48 @@
 <%= form_for (@user)  do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-  <%= f.label :Username, class: "col-md-6 control-label"%>
-  <div class="col-md-6">
+<div class="row">
+  <%= f.label :Name, class: "col-sm-6 control-label"%>
+  <div class="col-sm-6">
   <%= f.text_field :name, class: "form-control" %>
   </div>
+</div>
 
-  <%= f.label :Email, class: "col-md-6 control-label" %>
-  <div class="col-md-6">
+<div class="row">
+  <%= f.label :Email, class: "col-sm-6 control-label" %>
+  <div class="col-sm-6">
   <%= f.email_field :email, class: "form-control" %>
   </div>
+</div>
 
-  <%= f.label :Password, class: "col-md-6 control-label" %>
-  <div class="col-md-6">
+<div class="row">
+  <%= f.label :Password, class: "col-sm-6 control-label" %>
+  <div class="col-sm-6">
   <%= f.password_field :password, class: 'form-control' %>
   </div>
+</div>
 
-  <%= f.label :Password_confirmation, class: "col-md-6 control-label" %>
-  <div class="col-md-6">
+<div class="row">
+  <%= f.label :Password_confirmation, class: "col-sm-6 control-label" %>
+  <div class="col-sm-6">
   <%= f.password_field :password_confirmation, class: "form-control" %>
   </div>
+</div>
 
-  <div class="col-md-6">
+<div class="row">
+  <div class="col-sm-6">
   <%= f.label :Administrator, class: "control-label" %> 
   </div>
-  <div class="col-md-6">
+  <div class="col-sm-6">
   <%= f.check_box :admin  %>
   </div>
+</div>
 
-  <div class="col-md-6">&nbsp;</div>
-  <div class="col-md-6">
+<div class="spacer-20"></div>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-6">
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
-  </div
+  </div>
+</div>
 
 <% end %>
