--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'Edit user') %>
 <% provide(:button_text, 'Save changes') %>
 <h1>Update your profile</h1>
-<div class="row">
-  <div class="col-md-4 col-md-offset-4">
+
+  <div class="col-sm-4 col-sm-offset-4">
     <%= render 'form' %>
   </div>
-</div>
