--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Add new user') %>
-<% provide(:button_text, 'Create my account') %>
+<% provide(:button_text, 'Create account') %>
+
 <h1>Add new user</h1>
 
-<div class="row">
-  <div class="col-md-4 col-md-offset-4">
+
+  <div class="col-sm-4 col-sm-offset-4">
     <%= render 'form' %>
   </div>
-</div>
