--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,17 @@
 <% provide(:title, @user.name) %>
 
-<div>
-<h1> User profile </h1>
+	<h1><%= @user.name %> -  User's profile </h1>
 
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-	      <%= @user.name %> :  <%= @user.email %> :  Admin: <%= @user.admin? %>
-      </h1>
-    </section>
-  </aside>
+<div class="row justify-content-sm-center">
+  <div class="col-sm-6 col-sm-offset-3">
+	   <pre>
+	      Username: <%= @user.name %>
+	      Email: <%= @user.email %>
+	      Admin?: <%= @user.admin %>
+           </pre>
+	    
+	    <%= button_to "Edit", edit_user_path(@user), class: "btn btn-primary", :method => "get" %>
+        
+  </div>
 </div>
 
-</div>
