--- a/app/views/visits/edit.html.erb
+++ b/app/views/visits/edit.html.erb
@@ -7,10 +7,10 @@
 
 <h1><%= @patient.full_name %> <%= @visit.entry_ts.strftime("%D %H:%M") %> : Update Visit Details</h1>
 
-<div class="row justify-content-md-center">
-	<div class="col-md-10 col-md-offset-2">
+  <div class="row"> 
+  <div class="form-group col-sm-10 col-md-6 col-sm-offset-1 col-md-offset-3">
 
     	<%= render 'form' %>
 
-	</div>
-</div>
+  </div>
+  </div>
