--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -2,10 +2,9 @@
 <% provide(:button_text, 'Save') %>
 <h1>New Visit - <%= @patient.full_name %></h1>
 
-<div class="row justify-content-md-center">
-	<div class="col-md-10 col-md-offset-2">
 
+  <div class="row"> 
+  <div class="form-group col-sm-10 col-md-6 col-sm-offset-1 col-md-offset-3">
     <%= render 'form' %>
-
-	</div>
-</div>
+  </div>
+  </div>
